# grpc-proxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  cmd.sh  mg.sh
deploy/: configmap.yaml  deployment.yaml  echo_deployment.yaml  echo_service.yaml  service.yaml  webhook-create-signed-cert.sh  webhook-patch-ca-bundle.sh  webhook_deployment.yaml  webhook_mutating.yaml  webhook_rbac.yaml  webhook_service.yaml
example/: hello.proto
example/docker/: Dockerfile  build.sh
example/env_sink/: example.sh
example/metadata/: Dockerfile  example.sh  hello.proto
example/restful/: example.sh
src/: main.rs
src/app/: dyn_map_impl.rs  dyn_map_simple.rs  md_filters_impl.rs  mod.rs  proxy_sink.rs  query_analysis_impl.rs  response.rs  server.rs
src/cmd/: exit.rs  mod.rs  run.rs  show.rs  test.rs
src/config/: config.rs  config.toml
src/infra/: mod.rs
src/infra/dynamic/: client.rs  compressed_dictionary_tree.rs  mod.rs  simple_index.rs  transition.rs
src/infra/profiler/: mod.rs  reflect.rs  reflect_file_desc.rs  services_desc_assembler.rs
src/infra/server/: filter_middle_log.rs  filter_middle_req_id.rs  filter_middle_time.rs  http_server.rs  mod.rs  shutdown_control.rs
src/util/: mod.rs
webhook/: Dockerfile  go.mod  go.sum  main.go  sidecar_rust_grpc_proxy.go
webhook/certs/: cert.pem  key.pem
