[package]
name = "rust-grpc-proxy"
version = "0.1.0"
edition = "2021"
authors = ["wangdong <1443965173@qq.com>"]
license = "MIT"
description = "The grpc dynamic proxy is based on rust"

[dependencies]
wd_run = "0.2.2"
wd_log = "0.1.5"
tokio = {version = "1.23",features = ["full"]}
tokio-stream = "0.1"
hyper = {version = "0.14.23",features = ["full"]}
async-trait = "0.1.61"
anyhow = "1.0.68"
protobuf = "3.2.0"
protobuf-json-mapping = "3"
tonic = "0.8.3"
prost = "0.11.3"
#prost-types = "0.11.3"